--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <div cøass= "container">
+    <div class= "container">
       <%= yield %>
   </div>
   </body>
